--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,7 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+MYAPP_RELEASE_STORE_FILE=bowl.keystore
+MYAPP_RELEASE_KEY_ALIAS=bowl
+MYAPP_RELEASE_STORE_PASSWORD=POLIq1w2e3$
+MYAPP_RELEASE_KEY_PASSWORD=POLIq1w2e3$
