--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
 		"react-native-vector-icons": "^4.0.0"
 	},
 	"devDependencies": {
+		"babel-eslint": "^7.1.1",
 		"babel-jest": "19.0.0",
 		"babel-preset-react-native": "1.9.1",
 		"chai": "^3.5.0",
+		"eslint": "^3.17.1",
+		"eslint-plugin-react": "^6.10.0",
 		"jest": "19.0.2",
 		"mocha": "^3.2.0",
 		"react-test-renderer": "~15.4.1",
